--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Home – GOV.UK Prototype Kit
+  TRAMS
 {% endblock %}
 
 {% block content %}
@@ -10,35 +10,36 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Prototype your service using GOV.UK Prototype Kit
-        <span class="govuk-caption-xl">{{releaseVersion}}</span>
-      </h1>{{releaseVersion | log }}
+        TRAMS - Prototype review V1.1
+      </h1>
       <p>
-        This kit lets you rapidly create HTML prototypes of GOV.UK services.
+        This prototype includes individual pages from the TRAMS service.
       </p>
 
       <p>
-        It contains all you need to prototype anything from simple static pages to complex, data-driven transactions.
+      The following list contains links to static pages.
       </p>
 
-      <h2 class="govuk-heading-m">About this page</h2>
-
-      <p>We recommend you add links to your prototype to this page, rather than delete it.
-        You'll find this page in the kit at '/app/views/index.html'.</p>
-
-      <p>You can change the service name by editing the file '/app/config.js'.</p>
-
-      <h2 class="govuk-heading-m">Examples and documentation</h2>
+      <h2 class="govuk-heading-m">Accessibility related</h2>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/docs/tutorials-and-examples">Tutorials and templates</a>
-        </li>
-        <li>
-          <a href="https://design-system.service.gov.uk">GOV.UK Design System</a>
-        </li>
+          <a href="/accessibility">Accessibility statement</a>
+        </li>  
       </ul>
+
+      <h2 class="govuk-heading-m">Design History</h2>
+      
+      <ul class="govuk-list govuk-list--bullet">
+       
+        <li>
+          <a href="https://sdd-design-history.netlify.app/a2b-external/" class="govuk-link" rel="noreferrer noopener" target="_blank">A design history for the SDD services (opens in new tab)</a>
+        </li> 
+     
+      </ul>
+
     </div>
   </div>
 
 {% endblock %}
+
