--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -43,7 +43,7 @@
   {# Set serviceName in config.js. #}
   {{ govukHeader({
     homepageUrl: "/",
-    serviceName: serviceName,
+    serviceName: TRAMS,
     serviceUrl: "/",
     containerClasses: "govuk-width-container"
   }) }}
